# Qtcreator-tests

./: README.md
qt_new/aula_02-atvs/aula_02-atvs/: main.cpp
qt_new/aula_02-atvs/build-aula_02-atvs-Desktop_b33181-Debug/: Makefile  aula_02-atvs
qt_new/aula_02/aula_02/: main.cpp
qt_new/aula_02/build-aula_02-Desktop_b33181-Debug/: Makefile  aula_02
qt_new/cpp-builder/build-teste_builder-Desktop_b33181-Debug/: Makefile  (+1 more)
qt_new/cpp-library/helloLib/hello/: CMakeLists.txt  hello.cpp  hello.h  hello_global.h
qt_new/cpp-library/helloLib/hello/build-teste-Desktop_b33181-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake  teste
qt_new/cpp-library/helloLib/hello/build-teste-Desktop_b33181-Debug/.cmake/api/v1/reply/: cache-v2-8e22e913c290534852ff.json  cmakeFiles-v1-9871d3b5b817f6ebdfa3.json  codemodel-v2-caae812f3c6077cc5132.json  directory-.-Debug-3a02b9afc3d71aca92ae.json  index-2024-09-02T19-46-15-0393.json  target-teste-Debug-601c2a043d99c16edf8f.json  target-teste_autogen-Debug-c3e28cd3e758e633724c.json
qt_new/cpp-library/helloLib/hello/build-teste-Desktop_b33181-Debug/.qtc_clangd/: compile_commands.json
qt_new/cpp-library/helloLib/hello/build-teste-Desktop_b33181-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.7538B208A7B59330.idx  main.cpp.CEE00A87669FDAB2.idx  qarraydata.h.3628991B23841294.idx  qatomic.h.9AC986C6F14A5858.idx  qnamespace.h.C7381A0867A9AB6D.idx  qobjectdefs.h.54631DE9DC05AD38.idx  qstringalgorithms.h.4031C58D0D0B19B7.idx  qtcore-config.h.79B75E825DC5D62E.idx
qt_new/cpp-library/helloLib/hello/teste/: CMakeLists.txt
(+569 files in other folders)
